more bugs squashed

--- a/react-app/src/components/projects/projectContainer.css
+++ b/react-app/src/components/projects/projectContainer.css
@@ -74,6 +74,10 @@
     color:rgb(0, 176, 231)
 }
 
+.project-name:hover {
+    color: rgb(0, 0, 151);
+}
+
 .project-created-at {
     font-style: italic;
 }
